// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Logo should render custom logo 1`] = `
<div>
  <img
    class="makeStyles-custom-9 makeStyles-custom-11"
    src="https://example.com/example.png"
  />
</div>
`;

exports[`components/Logo should render rectangular logo 1`] = `
<div>
  <div
    class="makeStyles-quilt-6 makeStyles-quilt-8"
  />
</div>
`;

exports[`components/Logo should render squared logo 1`] = `
<div>
  <div
    class="makeStyles-quilt-2 makeStyles-quilt-4"
  />
</div>
`;
